--- a/css/media.scss
+++ b/css/media.scss
@@ -1,9 +1,144 @@
+@media (max-width: 1125px) {
+  .main-block__image img {
+      opacity: 0.4;
+  }
+}
+@media (max-width: 1073px) {
+  .advice .wrapper_advice .advice_item .wrapper_for_text_advice {
+    padding: 30px 22px 0 20px;
+  }
+}
+@media (max-width: 976px) {
+  br {
+    display: none;
+  }
+  .description_all__advice {
+    padding: 10px 150px;
+  }
+}
+@media (max-width: 969px) {
+  .experience .description_experience {
+    padding: 10px 100px;
+  }
+}
+@media (max-width: 934px) {
+  .advice .wrapper_advice .advice_item .wrapper_for_text_advice {
+    padding: 30px 15px 0 15px;
+  }
+}
+@media (max-width: 879px) {
+  .advice .wrapper_advice {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .advice .wrapper_advice .advice_item {
+    min-width: 40%;
+  }
+  .advice .wrapper_advice .advice_item .icon_advice {
+    position: static;
+  }
+   img {
+    margin: 0 auto;
+  }
+
+  .advice .wrapper_advice .advice_item {
+    position: static;
+  }
+  .advice .wrapper_advice .advice_item .wrapper_for_text_advice .subtitle_advice {
+    text-align: center;
+  }
+  .advice .wrapper_advice .advice_item .wrapper_for_text_advice .description_advice {
+    text-align: center;
+  }
+}
+@media (max-width: 794px) {
+  .page_services .container__services .wrapper_item .title_service {
+    font-size: 20px;
+  }
+  .page_services .container__services .wrapper_item .description_service {
+    font-size: 12px;
+  }
+  .page_services .container__services .wrapper_item .wrapper_item_min {
+    padding: 30px 20px;
+  }
+}
+@media (max-width: 751px) {
+  .description_all__advice {
+    padding: 10px 80px;
+  }
+}
+@media (max-width: 670px) {
+  .experience .wrapper_experience .item_experience .description_experience_text {
+    font-size: 12px;
+  }
+  .experience .wrapper_experience .item_experience .subtitle_experience {
+    font-size: 33px;
+  }
+}
+@media (max-width: 660px) {
+  .page_services {
+    margin-top: 15px;
+  }
+  .page_services .container__services .wrapper_item {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    min-height: 215px;
+    .icon {
+      display: flex;
+      justify-content: center;
+    }
+  }
+  .page_services .container__services .wrapper_item:not(:last-child) {
+    margin-bottom: 15px;
+  }
+
+  .page_services .container__services {
+    flex-wrap: wrap;
+  }
+  .page_services .container__services .wrapper_item .title_service {
+    text-align: center;
+  }
+  .page_services .container__services .wrapper_item .description_service {
+    text-align: center;
+  }
+  .experience .description_experience {
+    padding: 10px 50px;
+  }
+}
+@media (max-width: 634px) {
+  .experience .title_all {
+    padding-top: 55px;
+  }
+  .experience .wrapper_experience {
+    padding: 35px 0 60px 0;
+  }
+}
+@media (max-width: 574px) {
+  .experience .wrapper_experience .item_experience {
+    min-width: 240px;
+  }
+  .experience .wrapper_experience {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .description_all__advice {
+    padding: 10px 40px;
+  }
+}
 @media (max-width: 524px) {
     .header .header_flex .header_navigation_list {
         margin-left: 55px;
     }
+    .experience .description_experience {
+      padding: 10px 30px;
+    }
 }
-
+@media (max-width: 510px) {
+  .experience .wrapper_experience .item_experience {
+    min-width: 200px;
+  }
+}
 @media (max-width: 450px) {
     .menu-btn{
         display: flex;
@@ -103,83 +238,59 @@
       .header .header_flex .header_navigation_list {
         margin-left: 0;
     }
-      }
-
-      @media (max-width: 402px) {
+}
+@media (max-width: 437px) {
+  .main-block__body .promo_title {
+      font-size: 42px;
+  }
+}
+@media (max-width: 428px) {
+  .experience .wrapper_experience .item_experience {
+    min-width: 180px;
+  }
+  .description_all__advice {
+    padding: 10px 20px;
+  }
+}
+@media (max-width: 402px) {
           .main-block__body .btn_wrapper {
             flex-wrap: wrap;
           }
         .main-block__body .btn_wrapper .orange {
             flex: 1 1 100%;
-            margin-bottom: 20px;
+            margin: 0 0 20px 0;
         }
         .main-block__body .btn_wrapper .transparent {
             flex: 1 1 100%;
         }
-      }
-
-
-      @media (max-width: 437px) {
-      .main-block__body .promo_title {
-          font-size: 42px;
-      }
-      }
-
-      @media (max-width: 366px) {
+}
+@media (max-width: 388px) {
+.experience .description_experience {
+  padding: 10px;
+  }
+  .experience .wrapper_experience .item_experience {
+    min-width: 160px;
+  }
+  .description_all__advice {
+    padding: 10px;
+  }
+}
+@media (max-width: 366px) {
         .main-block__body .promo_subtitle {
             font-size: 17px;
         }
-        }
+}
+@media (max-width: 348px) {
+  .experience .wrapper_experience .item_experience {
+    min-width: 140px;
+  }
+}
+     
 
-      @media (max-width: 1125px) {
-          .main-block__image img {
-              opacity: 0.4;
-          }
-      }
+    
 
-      @media (max-width: 976px) {
-        br {
-          display: none;
-        }
-    }
+   
+    
 
-    @media (max-width: 794px) {
-      .page_services .container__services .wrapper_item .title_service {
-        font-size: 20px;
-      }
-      .page_services .container__services .wrapper_item .description_service {
-        font-size: 12px;
-      }
-      .page_services .container__services .wrapper_item .wrapper_item_min {
-        padding: 30px 20px;
-      }
-    }
-    @media (max-width: 660px) {
-      .page_services {
-        margin-top: 15px;
-      }
-      .page_services .container__services .wrapper_item {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        min-height: 215px;
-        .icon {
-          display: flex;
-          justify-content: center;
-        }
-      }
-      .page_services .container__services .wrapper_item:not(:last-child) {
-        margin-bottom: 15px;
-      }
-
-      .page_services .container__services {
-        flex-wrap: wrap;
-      }
-      .page_services .container__services .wrapper_item .title_service {
-        text-align: center;
-      }
-      .page_services .container__services .wrapper_item .description_service {
-        text-align: center;
-      }
-    }
+   
 
