--- a/css/style.scss
+++ b/css/style.scss
@@ -362,6 +362,22 @@
             }
         }
     }
+    .brands_wrapper {
+        margin-top: 136px;
+        padding: 70px 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+        .item_brand {
+            flex: 0 1 14.6777%;
+            text-align: center;
+            min-width: 140px;
+            padding: 8px 15px;
+            
+        }
+        
+    }
 }
 
 // ............................... ENDSECTION WHO YOU ARE........................................................................................
